{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 22,
  "lineage": "2ebc5156-cff2-3cbf-ffa1-ce0f7dddd6c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:internet-gateway/igw-0e83b5c25b6f49f2e",
            "id": "igw-0e83b5c25b6f49f2e",
            "owner_id": "042789613736",
            "tags": {
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:route-table/rtb-0b280ea13deb5efab",
            "id": "rtb-0b280ea13deb5efab",
            "owner_id": "042789613736",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Private Route Table",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:route-table/rtb-0493573f78d22e25f",
            "id": "rtb-0493573f78d22e25f",
            "owner_id": "042789613736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e83b5c25b6f49f2e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef67e91bfa143792",
            "route_table_id": "rtb-0b280ea13deb5efab",
            "subnet_id": "subnet-0a87c0fdaab689a7a"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_snet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e549c50f7d176e7f",
            "route_table_id": "rtb-0b280ea13deb5efab",
            "subnet_id": "subnet-003df50d3f3aa1e93"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_snet_1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a491b62ba1da4370",
            "route_table_id": "rtb-0493573f78d22e25f",
            "subnet_id": "subnet-0e0c3889f2bab0b28"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_snet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d494c45fbec8c33d",
            "route_table_id": "rtb-0493573f78d22e25f",
            "subnet_id": "subnet-0176e6d659fca4e00"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_snet_1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:security-group/sg-0a03a16d1d122ee2c",
            "description": "Security group for application tier EC2 instances in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a03a16d1d122ee2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule allowing HTTP ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031dfa40733a1969b"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule allowing SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "042789613736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application Tier Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Application Tier Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:security-group/sg-03113baa9da57111c",
            "description": "Security group for RDS DB instance in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03113baa9da57111c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "private-db-sg",
            "name_prefix": "",
            "owner_id": "042789613736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private DB Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Private DB Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:security-group/sg-031dfa40733a1969b",
            "description": "Security group for public instance in public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031dfa40733a1969b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule allowing HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule allowing SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-instance-sg",
            "name_prefix": "",
            "owner_id": "042789613736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Public Instance Security Group",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_snet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:subnet/subnet-0a87c0fdaab689a7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87c0fdaab689a7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042789613736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet us-east-1a",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Private Subnet us-east-1a",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_snet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:subnet/subnet-003df50d3f3aa1e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003df50d3f3aa1e93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042789613736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet us-east-1b",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Private Subnet us-east-1b",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_snet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:subnet/subnet-0e0c3889f2bab0b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0c3889f2bab0b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "042789613736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_snet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:subnet/subnet-0176e6d659fca4e00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0176e6d659fca4e00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042789613736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "vpc_id": "vpc-024f402f5a0ce7bc7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:042789613736:vpc/vpc-024f402f5a0ce7bc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efa32db57b637b2f",
            "default_route_table_id": "rtb-04c2b6dfaa3dfbf4c",
            "default_security_group_id": "sg-09cdafb5d1638001b",
            "dhcp_options_id": "dopt-037eabe7aa79e3baf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024f402f5a0ce7bc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c2b6dfaa3dfbf4c",
            "owner_id": "042789613736",
            "tags": {
              "Name": "vpc",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            },
            "tags_all": {
              "Name": "vpc",
              "archuuid": "67fef8f5-5379-4866-b924-0e4ec08f772e",
              "env": "Development"
            }
          }
        }
      ]
    }
  ]
}